# disable-heat-template-generator-dashboard

./: README.rst  setup.cfg
disable_heat_generator_dashboard/enabled/: _9650_disable_project_template_generator_panel.py
