[metadata]
name = disable-heat-template-generator-dashboard
author = Dmitriy Rabotyagov
author_email = noonedeadpunk@gmail.com
summary = Hide/disable currently broken panel for generating templates from the Heat Dashboard
description_file = README.rst
home_page = https://github.com/noonedeadpunk/disable-heat-template-generator-dashboard
license = Apache-2
python_requires = >=3.8
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
keywords =
    horizon
    heat
    orchestration
    openstack

[files]
packages =
    disable_heat_generator_dashboard
